--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "clientinstall": "npm install --prefix client",
+    "serverinstall": "npm install",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "install": "concurrently \"npm run serverinstall\" \"npm run clientinstall\"",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +20,7 @@
     "@google-cloud/secret-manager": "^3.2.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
